Bug 145599 - Calc Charts display gets corrupted when you draw a line inside them
Summary: Calc Charts display gets corrupted when you draw a line inside them
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
7.2.0.0 alpha1+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.5.0 target:7.4.6 target:7.4.4
Keywords: bibisected, bisected, regression
: 148210 153792 (view as bug list)
Depends on:
Blocks: Chart Shapes
  Show dependency treegraph
 
Reported: 2021-11-09 10:05 UTC by Andy
Modified: 2023-03-30 13:26 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
A Calc Chart with a line drawn manually, being squeezed to half the correct height (14.36 KB, application/vnd.oasis.opendocument.spreadsheet)
2021-11-09 10:07 UTC, Andy
Details
The screen capture of how I see the file on the screen, in case you see something different (142.69 KB, image/jpeg)
2021-11-09 10:08 UTC, Andy
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andy 2021-11-09 10:05:11 UTC
Description:
When you insert a straight line with the drawing tools in a Calc Chart (for example to stress a specific point in the graph), everything seems ok at the beginning, but when you save the file and reopen it the chart display is strongly corrupted, being squeezed to a small portion of the chart rectangle. If you delete the straight line from the chart, the display becomes correct again. In all, it is not possible to insert lines in charts with the drawing tools.

Steps to Reproduce:
1. Create a Calc file, insert some data, then create a (any) chart for them
2. NOw open the chart for editing, and use the drawing tools to insert a straight line in the chart. After that, click elsewhere to close the graph. Everything is ok
3. Now save the file and reopen it. The chart display is gone berserk, with the main area (the part with the X-Y axis) squeezed vertically and possibly horizontally as well to a fraction of the total chart size.
4. if you reopen the chart for editing, the display is correct again, but only temporarily - as soon as you exit the editing, the display is corrupted again
5. the only way to display the chart correctly is to DELETE the straight line altogether. 

Actual Results:
Bad display for the charts including a manually drwan straight line

Expected Results:
The chart should be display correctly all the time


Reproducible: Always


User Profile Reset: No



Additional Info:
as in expected results
Comment 1 Andy 2021-11-09 10:07:03 UTC
Created attachment 176163 [details]
A Calc Chart with a line drawn manually, being squeezed to half the correct height
Comment 2 Andy 2021-11-09 10:08:31 UTC
Created attachment 176164 [details]
The screen capture of how I see the file on the screen, in case you see something different
Comment 3 m_a_riosv 2021-11-11 00:37:20 UTC
Reproducible.
Version: 7.2.3.1 (x64) / LibreOffice Community
Build ID: 1d5dee817bde88d78dbcc0d00f88492568e131d5
CPU threads: 4; OS: Windows 10.0 Build 21390; UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US Calc: CL

Seems the issue is in save/reopen.
Comment 4 nobu 2022-11-14 09:28:29 UTC
*** Bug 148210 has been marked as a duplicate of this bug. ***
Comment 5 nobu 2022-11-14 19:46:13 UTC
Reproducible with Version 7.2.0 or later.
Comment 6 m_a_riosv 2022-11-14 21:52:23 UTC
Still reproducible with
Version: 7.5.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 517d05dbfd1e25e51d4b813f5a4c53b89464aa43
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US Calc: CL threaded
Comment 7 nobu 2022-11-15 06:19:08 UTC
Not Reproduced with before Version 7.1.8

Reproducible with Version 7.2.0.0.alpha1 or later.

The issue seems to be reopening in Version 7.2.0.0.alpha1 or later.
Comment 8 Stéphane Guillou (stragu) 2022-11-28 09:22:06 UTC
Issue can also be reproduced in a chart in Writer.

Bisected to:
 33da8d54e0499bccc03bdd3aa86482eb4f6240d0 is the first bad commit
commit 33da8d54e0499bccc03bdd3aa86482eb4f6240d0
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Fri May 7 22:02:01 2021 +0200

    source 2ed8c34bca56c1a30d727b21d9096cb77e88197a

 instdir/program/libchartcorelo.so | Bin 4580512 -> 4580872 bytes
 instdir/program/libsvxcorelo.so   | Bin 11806600 -> 11806600 bytes
 instdir/program/setuprc           |   2 +-
 instdir/program/versionrc         |   2 +-
 4 files changed, 2 insertions(+), 2 deletions(-)

Which points to:

commit 2ed8c34bca56c1a30d727b21d9096cb77e88197a
author	Noel Grandin <noel.grandin@collabora.co.uk>	Wed May 05 10:54:44 2021 +0200
committer	Noel Grandin <noel.grandin@collabora.co.uk>	Fri May 07 21:51:32 2021 +0200
tree 4eb83db9bd66a6719ed88df70a123993ce246306
parent ea67083cf5b8bceeab7d521663c768b59dd49d1d

use a single global item pool for chart2 draw model

Noel, could you please have a look?
Comment 9 Commit Notification 2022-12-01 20:29:22 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/c6aae3f4035f0a2dceba94b1956f5fc0ace3b3ee

tdf#145599 Charts gets corrupted when you draw a line inside them

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Stéphane Guillou (stragu) 2022-12-02 16:47:47 UTC
Verified as fixed in:

Version: 7.5.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 2b093d27b7e6f231512920f20089fcac291b021f
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Thanks Noel!
Comment 11 nobu 2022-12-24 00:40:12 UTC
https://bugs.documentfoundation.org/show_bug.cgi?id=152077

Similarly, it should be available in the next version 7.4.? .
Comment 12 Commit Notification 2022-12-27 18:10:59 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/64db5c602b25aeaefcbb8ac93413a8e6b6ef5ffa

tdf#145599 Charts gets corrupted when you draw a line inside them

It will be available in 7.4.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 Commit Notification 2022-12-28 09:17:58 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-7-4-4":

https://git.libreoffice.org/core/commit/05711aea7d52a69cc6932c6b5c032a1323c430d2

tdf#145599 Charts gets corrupted when you draw a line inside them

It will be available in 7.4.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 14 Xisco Faulí 2023-01-24 10:36:15 UTC
7.4.5 was a hotfix release, updating target in status-whiteboard
Comment 15 Stéphane Guillou (stragu) 2023-03-09 08:31:41 UTC
*** Bug 153792 has been marked as a duplicate of this bug. ***