tdf#145599 Charts gets corrupted when you draw a line inside them

This reverts
    commit 2ed8c34bca56c1a30d727b21d9096cb77e88197a
    use a single global item pool for chart2 draw model

Change-Id: I640a981a2cbbed1cb9e6c0b0c239c78bb481e12e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/143526
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
(cherry picked from commit c6aae3f4035f0a2dceba94b1956f5fc0ace3b3ee)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/144803
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>